--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ h2{margin-bottom:10px;}
 textarea{width:80%;height:50px;}
 </style>
 </head>
+ <h2>PDF Tools</h2>
+<a href="editor.html" style="background:#0078ff;color:white;padding:10px 18px;border-radius:6px;text-decoration:none;font-size:18px;">
+Buka PDF Visual Editor
+</a>
 <body>
 
 <div class="container">
