--- a/editor.html
+++ b/editor.html
@@ -2,73 +2,57 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>PDF Visual Editor - Viewer Mode</title>
+<title>PDF Editor Viewer</title>
+
 <style>
 body{
-    font-family: Arial; margin:0; background:#f1f1f1;
+    font-family: Arial; margin:0; background:#f2f2f2;
 }
 header{
-    background:#ffffff; padding:12px 20px; display:flex;
-    align-items:center; justify-content:space-between;
+    background:#fff; padding:15px 20px; font-size:24px; font-weight:bold;
     border-bottom:1px solid #ddd;
-    position:sticky; top:0; z-index:10;
 }
-header h2{ margin:0;}
+.tools{
+    text-align:center; margin-top:15px;
+}
 .tools button{
-    padding:8px 14px; margin-right:8px; border:none;
-    background:#0078ff; color:white; border-radius:6px; cursor:pointer;
+    padding:10px 18px; border:none; margin:5px;
+    cursor:pointer; border-radius:6px; font-size:16px; font-weight:bold;
 }
-.tools button.red{background:#ff3b3b;}
-.tools button.green{background:#00b050;}
-.tools button.orange{background:#ffaa00;}
-
-#fileInput{display:none;}
 #pdfContainer{
-    padding:20px;
-    display:flex; flex-wrap:wrap;
-    gap:15px; justify-content:center;
+    padding:20px; display:flex; flex-wrap:wrap; 
+    justify-content:center; gap:20px; margin-top:20px;
 }
 .pageBox{
-    background:white; border:1px solid #ccc; border-radius:6px;
-    width:180px; padding:10px;
-    text-align:center; cursor:pointer;
-    transition: .2s;
+    width:220px; background:#fff; border-radius:8px;
+    border:2px solid transparent; padding:10px; text-align:center;
+    box-shadow:0 3px 6px rgba(0,0,0,.1);
+    cursor:pointer; transition:.2s;
 }
-.pageBox:hover{
-    transform:scale(1.03);
-    box-shadow:0 4px 10px rgba(0,0,0,.1);
-}
-.pageBox img{
-    width:100%;
-}
-
-/* Selected effect */
-.selected{
-    border:3px solid #0078ff !important;
-}
+.pageBox.selected{ border:3px solid #0078ff; }
+.pageBox img{ width:100%; border-radius:4px; }
 </style>
+
 </head>
 <body>
 
-<header>
-    <h2>PDF Editor Viewer</h2>
+<header>PDF Editor Viewer</header>
 
-    <div class="tools">
-        <button onclick="selectFile()">📄 Buka PDF</button>
-        <button class="orange" onclick="rotatePage()">🔄 Rotate</button>
-        <button class="red" onclick="deletePages()">🗑 Delete</button>
-        <button class="green" onclick="downloadPDF()">💾 Export PDF</button>
-    </div>
-</header>
-
-<input type="file" id="fileInput" accept="application/pdf" onchange="openPDF(event)">
-
-<div id="pdfContainer"> 
-    <h3>📄 Upload PDF untuk menampilkan halaman di sini...</h3>
+<div class="tools">
+    <button onclick="selectFile()" style="background:#0078ff;color:white;">📄 Buka PDF</button>
+    <button onclick="rotatePage()" style="background:#ffbb00;color:#000;">🔄 Rotate</button>
+    <button onclick="deletePages()" style="background:#ff5050;color:white;">🗑 Delete</button>
+    <button onclick="downloadPDF()" style="background:#00c853;color:white;">💾 Export PDF</button>
+    <button onclick="insertPDF()" style="background:#6a00ff;color:white;">📎 Insert PDF</button>
 </div>
+
+<input type="file" id="fileInput" accept="application/pdf" onchange="openPDF(event)" style="display:none">
+
+<div id="pdfContainer"><h2>Upload PDF untuk mulai mengedit</h2></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
 <script src="viewer.js"></script>
+
 </body>
 </html>
